--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   app:
-    image: jilexandr/natsavrotester:latest
+    image: jilexandr/natsavrotester:1.0.0
     environment:
       PORT: 8080
       NATS_SERVER: "http://nats:4222"
