--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,7 @@
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/runtime-corejs2": "^7.10.4",
     "@vue/component-compiler-utils": "^3.1.2",
-    "parcel": "^1.12.4",
+    "parcel-bundler": "^1.12.4",
     "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
