--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
+    "v-jsoneditor": "^1.4.1",
     "vue": "^2.6.11",
     "vue-hot-reload-api": "^2.3.4",
     "vuetify": "^2.3.4"
