--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "v-jsoneditor": "^1.4.1",
     "vue": "^2.6.11",
     "vue-hot-reload-api": "^2.3.4",
+    "vue-moment": "^4.1.0",
     "vuetify": "^2.3.4"
   }
 }
